feat: add swaggo for users
